crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__select_incorrect.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 4
        },
        "end": {
          "line": 3,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any, any, i32], found []"
    },
    {
      "range": {
        "start": {
          "line": 7,
          "character": 4
        },
        "end": {
          "line": 7,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any, any, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 4
        },
        "end": {
          "line": 11,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [any, any, i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 10,
                "character": 4
              },
              "end": {
                "line": 10,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 16,
          "character": 4
        },
        "end": {
          "line": 16,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 15,
                "character": 4
              },
              "end": {
                "line": 15,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 4
        },
        "end": {
          "line": 21,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f32, i32]"
    },
    {
      "range": {
        "start": {
          "line": 27,
          "character": 4
        },
        "end": {
          "line": 27,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found [f32, f64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 24,
                "character": 4
              },
              "end": {
                "line": 24,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 33,
          "character": 4
        },
        "end": {
          "line": 33,
          "character": 10
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f64, f32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 30,
                "character": 4
              },
              "end": {
                "line": 30,
                "character": 15
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 33,
          "character": 10
        },
        "end": {
          "line": 33,
          "character": 11
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64], found [f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 33,
                "character": 4
              },
              "end": {
                "line": 33,
                "character": 10
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 38,
          "character": 10
        },
        "end": {
          "line": 38,
          "character": 11
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64], found [f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 38,
                "character": 4
              },
              "end": {
                "line": 38,
                "character": 10
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 41,
          "character": 4
        },
        "end": {
          "line": 41,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found []"
    },
    {
      "range": {
        "start": {
          "line": 41,
          "character": 23
        },
        "end": {
          "line": 41,
          "character": 24
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [f64] at the end"
    },
    {
      "range": {
        "start": {
          "line": 44,
          "character": 4
        },
        "end": {
          "line": 44,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found [i32]"
    },
    {
      "range": {
        "start": {
          "line": 48,
          "character": 4
        },
        "end": {
          "line": 48,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found [f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 47,
                "character": 4
              },
              "end": {
                "line": 47,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 53,
          "character": 4
        },
        "end": {
          "line": 53,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found [f32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 52,
                "character": 4
              },
              "end": {
                "line": 52,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 51,
                "character": 4
              },
              "end": {
                "line": 51,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 58,
          "character": 4
        },
        "end": {
          "line": 58,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 57,
                "character": 4
              },
              "end": {
                "line": 57,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 63,
          "character": 4
        },
        "end": {
          "line": 63,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f32, i32]"
    },
    {
      "range": {
        "start": {
          "line": 69,
          "character": 4
        },
        "end": {
          "line": 69,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f32, f64, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 67,
                "character": 4
              },
              "end": {
                "line": 67,
                "character": 15
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 75,
          "character": 4
        },
        "end": {
          "line": 75,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f32, f32, i32], found [f64, f32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 72,
                "character": 4
              },
              "end": {
                "line": 72,
                "character": 15
              }
            }
          },
          "message": "expected type `f32`, found `f64`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 80,
          "character": 4
        },
        "end": {
          "line": 80,
          "character": 23
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [f64, f64, i32], found [f32, f32, i32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 78,
                "character": 4
              },
              "end": {
                "line": 78,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        },
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 77,
                "character": 4
              },
              "end": {
                "line": 77,
                "character": 15
              }
            }
          },
          "message": "expected type `f64`, found `f32`"
        }
      ]
    }
  ]
}
