crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__stacked_type_mismatch_from_func_params.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 6,
          "character": 8
        },
        "end": {
          "line": 6,
          "character": 19
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected type `i32`, found `f32`",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 2,
                "character": 23
              },
              "end": {
                "line": 2,
                "character": 26
              }
            }
          },
          "message": "parameter originally defined here"
        }
      ]
    }
  ]
}
